# tide-rbatis-askama-crud

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: app.rs  handlers.rs  main.rs  models.rs
src/handlers/: post.rs
templates/: base.html  hello_index.html  list_posts.html  tailwind.config.js
templates/components/: post.html
