[package]
name = "tide-rbatis-askama"
version = "0.1.0"
authors = ["fluunke <flrk@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
tide = "^0.16"

dotenv = "^0.15"

askama = { version = "^0.10", features = ["with-tide"] }
askama_tide = "^0.13"

rbatis = { version = "^1.8", features = ["async-io-postgres"] }
barrel = { version = "^0.6", features = ["pg"] }
chrono = { version = "^0.4", features = ["serde"] }

lazy_static = "^1.4"
log = "^0.4"
fast_log = "^1.3"
nanoid = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

surf = "^2.1"