[package]
name = "tide-rbatis-askama"
version = "0.1.0"
authors = ["fluunke <flrk@tuta.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
tide = "^0.16"

dotenv = "^0.15"

askama = { version = "^0.11", features = ["with-tide"] }
askama_tide = "^0.14"

rbatis = { version = "^3.1", default-features=false, features = ["default_mode", "runtime-async-std-rustls", "postgres"] }
rbson = "2.0"

barrel = { version = "^0.7", features = ["pg"] }

lazy_static = "^1.4"
log = "^0.4"
fast_log = "^1.5"
nanoid = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"